--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run server\" \"cd ../client && npm start\"",
-    "server": "nodemon app.js"
+    "server": "node index.js"
   },
   "author": "",
   "license": "ISC",
